[gd_scene load_steps=3 format=3 uid="uid://nx26rfpwvmop"]

[ext_resource type="PackedScene" uid="uid://bua18cspj4ypj" path="res://scenes/view_template.tscn" id="1_jrwbm"]
[ext_resource type="Script" path="res://scripts/view_clear_fail.gd" id="2_ly57c"]

[node name="ViewClearFail" instance=ExtResource("1_jrwbm")]
script = ExtResource("2_ly57c")

[node name="ClearFailedMenu" type="Control" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ClearFailedMenu" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.276476
anchor_top = 0.141975
anchor_right = 0.723524
anchor_bottom = 0.858025
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ClearFailedLabel" type="Label" parent="ClearFailedMenu/VBoxContainer" index="0"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Cllear failed"
horizontal_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="ClearFailedMenu/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreLabel" type="Label" parent="ClearFailedMenu/VBoxContainer/ScoreContainer" index="0"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "SCORE:"
horizontal_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="ClearFailedMenu/VBoxContainer/ScoreContainer" index="1"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "0
"
horizontal_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="ClearFailedMenu/VBoxContainer" index="2"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ClearFailedMenu/VBoxContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="RestartLevelButton" type="Button" parent="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "RESTART LEVEL"

[node name="LevelsButton" type="Button" parent="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
text = "Levels"

[node name="HomeButton" type="Button" parent="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
text = "Home"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="button_up" from="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer/RestartLevelButton" to="." method="_restart"]
[connection signal="button_up" from="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer/LevelsButton" to="." method="_go_to_levels"]
[connection signal="button_up" from="ClearFailedMenu/VBoxContainer/MarginContainer/VBoxContainer/HomeButton" to="." method="_go_to_home"]
